[gd_scene load_steps=33 format=3 uid="uid://dwhtysap0bsna"]

[ext_resource type="Script" uid="uid://dacwtt350g61n" path="res://Scenes/TrainingProgram/parts/Cards/RoomMiniCard/room_mini_card.gd" id="1_0jit3"]
[ext_resource type="PackedScene" uid="uid://cggkdkq5crbw4" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/CardBody.tscn" id="2_cri0k"]
[ext_resource type="Texture2D" uid="uid://ch8kmv3c7uul0" path="res://Media/images/redacted.png" id="2_fhq3g"]
[ext_resource type="PackedScene" uid="uid://b51r528fxi561" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerTitle.tscn" id="3_fl387"]
[ext_resource type="LabelSettings" uid="uid://nrxe2mbka1e4" path="res://Fonts/game/label_small_thick.tres" id="3_qlsmf"]
[ext_resource type="PackedScene" uid="uid://b8hw5jenpkiw8" path="res://UI/Buttons/TextBtn/TextBtn.tscn" id="4_ksj6n"]
[ext_resource type="PackedScene" uid="uid://cntgsx4ms1bdd" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerResource.tscn" id="4_op0jq"]
[ext_resource type="PackedScene" uid="uid://car8yud4yb0pj" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerVibes.tscn" id="5_6vose"]
[ext_resource type="LabelSettings" uid="uid://d0wal13o44wsq" path="res://Scenes/TrainingProgram/parts/Cards/RoomMiniCard/SmallContentFont.tres" id="5_qlsmf"]
[ext_resource type="PackedScene" uid="uid://nl3g28hein3g" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ResourceContainer/parts/ResourceItem/ResourceItem.tscn" id="6_cri0k"]
[ext_resource type="PackedScene" uid="uid://cus6h1nu75y1e" path="res://Scenes/TrainingProgram/parts/Cards/CardBody/parts/CardDrawerRoomAbilities.tscn" id="6_gmheq"]
[ext_resource type="LabelSettings" uid="uid://gjdqvbphklm4" path="res://Fonts/settings/small_label.tres" id="8_op0jq"]
[ext_resource type="LabelSettings" uid="uid://chq5rx4ad5jlu" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/MetricsContainer/parts/label_medium.tres" id="9_6vose"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fl387"]

[sub_resource type="ViewportTexture" id="ViewportTexture_gmheq"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_857f0"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.27451, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8pbb6"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.27451, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0dah"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.27451, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0bomq"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.27451, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl2ia"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.27451, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xu8pk"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.27451, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80hfg"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.27451, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dm64n"]
bg_color = Color(0.131379, 0.131379, 0.131379, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.27451, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aud1r"]
bg_color = Color(0, 0, 0, 0.796078)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xsj30"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hauqp"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1m0t"]
bg_color = Color(0.054902, 0.054902, 0.054902, 0.796078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_deyu1"]
bg_color = Color(0, 0, 0, 0.796078)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0.27451, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5xya"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvtep"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tk87u"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qapbw"]
bg_color = Color(1, 1, 1, 0)
border_color = Color(1, 1, 1, 0)

[node name="RoomMiniCard" type="PanelContainer"]
offset_right = 160.0
offset_bottom = 38.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_fl387")
script = ExtResource("1_0jit3")

[node name="CardBody" parent="." instance=ExtResource("2_cri0k")]
layout_mode = 2
card_size = Vector2(275, 300)
border_color = Color(0.337255, 0.27451, 1, 1)

[node name="TextureRect" parent="CardBody" index="0"]
texture = SubResource("ViewportTexture_gmheq")

[node name="SubViewport" parent="CardBody" index="1"]
size = Vector2i(275, 300)

[node name="CardBody" parent="CardBody/SubViewport/Control" index="0"]
custom_minimum_size = Vector2(275, 300)
offset_right = 275.0
offset_bottom = 300.0

[node name="PanelContainer" parent="CardBody/SubViewport/Control/CardBody/Front" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_857f0")

[node name="CardDrawerTitle" parent="CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="0" instance=ExtResource("3_fl387")]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8pbb6")
is_small = true
content = "Active Abilities"
title = "ROOM"
border_color = Color(0.337255, 0.27451, 1, 1)

[node name="CardDrawerResources" parent="CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="1" instance=ExtResource("4_op0jq")]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_i0dah")
is_left_side = true
border_color = Color(0.337255, 0.27451, 1, 1)

[node name="CardDrawerVibes" parent="CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="2" instance=ExtResource("5_6vose")]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0bomq")
title = "VIBES"
is_left_side = true
border_color = Color(0.337255, 0.27451, 1, 1)

[node name="CardDrawerResearcherPref" parent="CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="3" instance=ExtResource("3_fl387")]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xl2ia")
is_small = true
content = ""
title = "REQUIREMENTS"
border_color = Color(0.337255, 0.27451, 1, 1)

[node name="CardDrawerActiveAbilities" parent="CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="4" instance=ExtResource("6_gmheq")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_xu8pk")
title = "ACTIVE ABILITIES"
is_left_side = true
border_color = Color(0.337255, 0.27451, 1, 1)

[node name="CardDrawerPassiveAbilities" parent="CardBody/SubViewport/Control/CardBody/Front/PanelContainer/MarginContainer/FrontDrawerContainer" index="5" instance=ExtResource("6_gmheq")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_80hfg")
ability_type = 1
title = "PASSIVE ABILITIES"
is_left_side = true
border_color = Color(0.337255, 0.27451, 1, 1)

[node name="PanelContainer" parent="CardBody/SubViewport/Control/CardBody/Back" index="0"]
theme_override_styles/panel = SubResource("StyleBoxFlat_dm64n")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="Portrait" type="TextureRect" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
texture = ExtResource("2_fhq3g")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aud1r")

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ROOM NAME"
label_settings = ExtResource("5_qlsmf")
vertical_alignment = 1

[node name="OutputContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_xsj30")

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/OutputContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2"]
layout_mode = 2
alignment = 1

[node name="MetricList" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2"]
visible = false
layout_mode = 2

[node name="TextBtn" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/MetricList" instance=ExtResource("4_ksj6n")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hauqp")
icon = 1
panel_color = Color(0.054902, 0.054902, 0.054902, 0)
title = "Morale +1"

[node name="ResourceGrid" type="GridContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2"]
visible = false
layout_mode = 2
columns = 2

[node name="TextBtn" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/ResourceGrid" instance=ExtResource("4_ksj6n")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k1m0t")
inactive_color = Color(0.662745, 0.662745, 0.662745, 1)

[node name="NoBonusLabel" type="Label" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2"]
visible = false
layout_mode = 2
text = "No changes"
label_settings = ExtResource("5_qlsmf")
horizontal_alignment = 1

[node name="Currencies" type="PanelContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_deyu1")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Currencies"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Currencies/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Currencies/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "CURRENCIES"
label_settings = ExtResource("3_qlsmf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Currencies/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Money" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Currencies/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_cri0k")]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_j5xya")
icon = 31
no_bg = true
title = "1"

[node name="Materials" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Currencies/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_cri0k")]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_lvtep")
icon = 41
no_bg = true
title = "1"

[node name="Research" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Currencies/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_cri0k")]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tk87u")
icon = 44
no_bg = true
title = "1"

[node name="Core" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Currencies/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_cri0k")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_qapbw")
icon = 39
no_bg = true
title = "1"

[node name="Vibes" type="PanelContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_deyu1")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "VIBE"
label_settings = ExtResource("3_qlsmf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Morale" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Morale"]
layout_mode = 2
text = "MORALE"
label_settings = ExtResource("8_op0jq")
horizontal_alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Morale"]
layout_mode = 2
text = "-"
label_settings = ExtResource("9_6vose")
horizontal_alignment = 1

[node name="Safety" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Safety"]
layout_mode = 2
text = "SAFETY"
label_settings = ExtResource("8_op0jq")
horizontal_alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Safety"]
layout_mode = 2
text = "++"
label_settings = ExtResource("9_6vose")
horizontal_alignment = 1

[node name="Readiness" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -2
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Readiness"]
layout_mode = 2
text = "READINESS"
label_settings = ExtResource("8_op0jq")
horizontal_alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/OutputContainer/MarginContainer2/VBoxContainer2/Vibes/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/Readiness"]
layout_mode = 2
text = "+"
label_settings = ExtResource("9_6vose")
horizontal_alignment = 1

[editable path="CardBody"]
